--- a/config.yaml
+++ b/config.yaml
@@ -1,29 +1,31 @@
-Twitter:
-  APIKey: 
-  APIKeySecret: 
-  BearerToken: 
-  AccessToken: 
-  AccessTokenSecret: 
-  
-DataBase:
-  DBName: mysql # 数据库名称
-  Host: 
-  Port: 3306 # 端口
-  Username: # 用户名
-  Password: # 密码
-  Charset: utf8mb4 # 编码格式
-  Timeout: 10 # 超时时长 单位秒
-  MaximumConnections: 100 # 最大连接数
-  MinimumConnections: 10 # 最小连接数
-  IdleConnectionTimeout: 20 # 空闲连接超时时间
+twitter: # 推特相关配置
+  api_host: 'https://api.twitter.com'
+  api_key: '3K2JKjcNDNtmH9ZsIcZtDbgL4'
+  api_key_secret: '1oZPEAHupjbFA5J6y3P4cZT46SyjVDQgwJVyTJBPkobw6MxmIE'
+  bearer_token: 'AAAAAAAAAAAAAAAAAAAAANihowEAAAAAHpwnEqSWUERYaHiPBhsVUc6I6Qg%3DO1akhId2vaOMh0IdvWcetiRjaZ56nxmYCKL8Cu8u4EjhjGuTyO'
+  access_token: '1510242948721610755-Gk6gQZF0IuEwehkmXmwEyCgp6Qk9MK'
+  access_token_secret: 'dcCmx4jUZMPMq5pELgIrnGaOD4T6VXH8MrlzJ8MsumGke'
 
-TimedTask:
-  Period: 3600 # 定时任务运行周期 单位: s
+database:
+  driver: 'mysql' # 数据库类型
+  db_name: 'nft_dev' # 数据库名称
+  host: '180.184.138.237'
+  port: 3306 # 端口
+  username: 'nft_dev' # 用户名
+  password: 'k4r35kbMa7Jr3dmc' # 密码
+  charset: 'utf8mb4' # 编码格式
+  timeout: 1000 # 超时时长 单位秒
+  maximum_connections: 100 # 最大连接数
+  minimum_connections: 10 # 最小连接数
+  idle_connection_timeout: 1000 # 空闲连接超时时间
 
-Limiter: # 表示 900秒内25个请求
-  Duration: 900 # 时长 单位: s
-  Quantity: 25 # 次数 单位: 个
+timed_task:
+  period: 3600 # 定时任务运行周期 单位: s
 
-Proxy: # 代理
-  Host: 127.0.0.1 # 主机
-  Port: 7890 # 端口
+limiter: # 表示 900秒内25个请求
+  duration: 900 # 时长 单位: s
+  quantity: 25 # 次数 单位: 个
+
+proxy: # 代理
+  host: 127.0.0.1 # 主机
+  port: 7890 # 端口
